# ADF

./: .gitignore  CLAUDE.md  DEVELOPMENT_PLAN.md  HOWTO_BY_EXAMPLE.md  IMPLEMENTATION_STATUS.md  LICENSE  README.md  SPEC.md  SYNTAX.md
examples/: agent_memory.adf  arraysadf  basicadf  config_full.adf  constraints.adf  docs_mixed.adf  game_state.adf  multiline.adf  upgrade_patch.adf
parser/javascript/: README.md  package.json
parser/javascript/src/: cli.ts  document.ts  index.ts  lexer.ts  parser.test.ts  parser.ts  types.ts
parser/python/: README.md  pyproject.toml
parser/python/examples/: demo.py
parser/python/src/adf/: __init__.py  document.py  errors.py  lexer.py  parser.py  serializer.py
parser/python/tests/: test_basic_parsing.py  test_examples.py
parser/rust/: Cargo.toml  README.md
parser/rust/src/: document.rs  error.rs  lexer.rs  lib.rs  parser.rs  value.rs
parser/rust/tests/: basic_parsing.rs
